# HDML-interpreter

./: AST.hs  DataTypes.hs  HDML.cabal  Main.hs  Parser.hs  README.md  WojciechJarzabek.hs  WojciechJarzabekTests.hs  test1.pp6  test10.pp6  test11.pp6  test12.pp6  test13.pp6  test14.pp6  test15.pp6  test2.pp6  test3.pp6  test4.pp6  test5.pp6  test6.pp6  test7.pp6  test8.pp6  test9.pp6
